# rp2040-freertos-demo

./: .gitignore  CMakeLists.txt  README.md  main.c  setup.sh
